reactAppProject/k8s/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: react-app-deployment
  namespace: development
spec:
  replicas: 2
  template:
    metadata:
      labels:
        app: react-app
    spec:
      containers:
      - name: react-app-container
        image: healxci/cloud_engineer_test:latest
        ports:
        - containerPort: 3000
