reactAppProject/k8s/development/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: react-app-service
  namespace: development
spec:
  selector:
    app: react-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: LoadBalancer
