reactAppProject/k8s/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: react-app-ingress
  namespace: development
spec:
  rules:
  - host: localhost  # Use self-signed certificate
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: react-app-service
            port:
              number: 3000
  tls:
  - hosts:
    - localhost
    secretName: self-signed-cert
